--- a/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
@@ -34,6 +34,7 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -61,6 +62,11 @@
 
                 <TextBlock Grid.Row="3" Grid.Column="0" Text="Video Caps" VerticalAlignment="Center" />
                 <ComboBox  Grid.Row="3" Grid.Column="2" x:Name="CB_VideoCaps" Margin="10,5"/>
+
+                <TextBlock Grid.Row="4" Grid.Column="0" Text="Stop Dist" VerticalAlignment="Center" />
+                <common:MvtNumBox  Grid.Row="4" Grid.Column="2" Margin="10,5" Width="70" HorizontalAlignment="Left" x:Name="NB_DistToStops"/>
+                <TextBlock Grid.Row="4" Grid.Column="2" Text="m" Margin="85,5,0,5" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+
             </Grid>
         </GroupBox>
 
