--- a/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
@@ -25,7 +25,7 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <GroupBox Grid.Row="0" Margin="10" Style="{StaticResource MvtGroupBox}" Header="Units">
+        <GroupBox Grid.Row="0" Margin="10" Style="{StaticResource MvtGroupBox}" Header="Settings">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
@@ -49,20 +49,27 @@
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding FrameRate}" Width="25"/>
-                                <TextBlock Text="{Binding Resolution, Converter={StaticResource CamCapsResolution_Converter}}" Width="80"/>
-                                <TextBlock Text="{Binding Mediasubtype, Converter={StaticResource CamCapsMediatype_Converter}}"/>
+                                <StackPanel Orientation="Horizontal" Width="120">
+                                    <TextBlock Text="{Binding Mediasubtype, Converter={StaticResource CamCapsMediatype_Converter}}"/>
+                                    <TextBlock Text=" ("/>
+                                    <TextBlock Text="{Binding Resolution, Converter={StaticResource CamCapsResolution_Converter}}"/>
+                                    <TextBlock Text=")"/>
+                                </StackPanel>
+                                <TextBlock Text="@ "/>
+                                <TextBlock Text="{Binding FrameRate}"/>
+                                <TextBlock Text="Hz"/>
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
 
+                <!--
                 <TextBlock Grid.Row="2" Grid.Column="0" Text="Camera Caps" VerticalAlignment="Center" />
                 <ComboBox  Grid.Row="2" Grid.Column="1" x:Name="CB_CameraCaps" Margin="10,5"/>
 
                 <TextBlock Grid.Row="3" Grid.Column="0" Text="Video Caps" VerticalAlignment="Center" />
                 <ComboBox  Grid.Row="3" Grid.Column="2" x:Name="CB_VideoCaps" Margin="10,5"/>
-
+                -->
                 <TextBlock Grid.Row="4" Grid.Column="0" Text="Stop Dist" VerticalAlignment="Center" />
                 <common:MvtNumBox  Grid.Row="4" Grid.Column="2" Margin="10,5" Width="70" HorizontalAlignment="Left" x:Name="NB_DistToStops"/>
                 <TextBlock Grid.Row="4" Grid.Column="2" Text="m" Margin="85,5,0,5" VerticalAlignment="Center" HorizontalAlignment="Left"/>
