--- a/rx_common_lib_cs/Resources/MvtGroupBox.xaml
+++ b/rx_common_lib_cs/Resources/MvtGroupBox.xaml
@@ -16,7 +16,7 @@
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Border BorderBrush="WhiteSmoke" BorderThickness="2" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"></Border>
+                        <Border BorderBrush="WhiteSmoke" BorderThickness="2" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Background="{TemplateBinding Background}"/>
                         <Border Grid.Row="0" BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
                             <TextBlock Foreground="#ff303030" FontWeight="SemiBold" FontSize="{StaticResource MvtFontSize}" HorizontalAlignment="Center" VerticalAlignment="Center"
                        Text="{TemplateBinding Header}"></TextBlock>
