GUI: Fixed Views/PrintSystemView

--- a/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyGrid.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyGrid.xaml
@@ -10,10 +10,10 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="26"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="{Binding HasSideSelection, Converter={StaticResource BooleanToSideSelectionHeightConverter}}"/>
+            <RowDefinition Height="auto" x:Name="RowHeight_Side"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" x:Name="RowHeight_Heater"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
